Change History
==============

4.0.0 (unreleased)
------------------

- Dropped support for Python 2.4 and 2.5.

3.5.5 (2011-07-27)
------------------

* Properly restore the HTML snippet detection, by looking at the entire string
  and not just its start.

3.5.4 (2011-07-26)
------------------

* Restore detection of HTML snippets from 3.4 series.

3.5.3 (2011-03-18)
------------------

* Added new mime types for web fonts, cache manifest and new media formats.

3.5.2 (2011-02-11)
------------------

* LP #717289:  added 'video/x-m4v' mimetype for the '.m4v' extension.

3.5.1 (2010-03-23)
------------------

* LP #242321:  fix IndexError raised when testing strings consisting
  solely of leading whitespace.

* Updated mime-type for .js to be application/javascript.

3.5.0 (2009-10-22)
------------------

* Moved the implementation of zope.publisher.contenttype to
  zope.contenttype.parse, moved tests along.

3.4.3 (2009-12-28)
------------------
* Updated mime-type for .js to be application/javascript.

3.4.2 (2009-05-28)
------------------

* Added MS Office 12 types
  based on:
  http://www.therightstuff.de/2006/12/16/Office+2007+File+Icons+For+Windows+SharePoint+Services+20+And+SharePoint+Portal+Server+2003.aspx

3.4.1 (2009-02-04)
------------------

* Improved text_type(). Based on the patch from
  http://www.zope.org/Collectors/Zope/2355/

* Add missing setuptools dependency to setup.py.

* Added reference documentation.

3.4.0 (2007-09-13)
------------------

* First stable release as an independent package.